--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -12,17 +12,54 @@
     <title>Projects</title>
 </head>
 
-  <style>
+ <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: #f0f0f0;
+      background-color: #fdfbfa;
       color: #333;
+    }
+
+    .menu-btn {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      cursor: pointer;
+      z-index: 2000;
+      display: none;
+    }
+
+    .btn-line {
+      width: 30px;
+      height: 3px;
+      background: #333;
+      margin: 6px 0;
+    }
+
+    nav.menu {
+      background-color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 1rem 0;
+      gap: 2rem;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    nav.menu a {
+      text-decoration: none;
+      font-weight: bold;
+      color: #333;
+      transition: color 0.3s;
+    }
+
+    nav.menu a:hover {
+      color: #00bcd4;
     }
 
     .lg-heading {
       text-align: center;
-      margin-top: 2rem;
+      margin-top: 4rem;
       font-size: 2.5rem;
       text-transform: uppercase;
     }
@@ -34,7 +71,7 @@
     .sm-heading {
       text-align: center;
       font-weight: 400;
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
       color: #777;
     }
 
@@ -48,10 +85,10 @@
     }
 
     .item {
-      background: white;
+      background: #fff;
       border-radius: 10px;
       overflow: hidden;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       text-align: center;
       transition: transform 0.3s ease;
     }
@@ -70,11 +107,11 @@
     .btn-dark {
       display: inline-block;
       margin: 0.5rem;
-      padding: 0.5rem 1rem;
+      padding: 0.5rem 1.2rem;
       border-radius: 5px;
       text-decoration: none;
       font-weight: bold;
-      transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease;
     }
 
     .btn-light {
@@ -84,7 +121,7 @@
 
     .btn-dark {
       background: #00bcd4;
-      color: white;
+      color: #fff;
     }
 
     .btn-dark:hover {
@@ -95,45 +132,8 @@
       text-align: center;
       padding: 1rem;
       background: #222;
-      color: white;
+      color: #fff;
       margin-top: 2rem;
-    }
-
-    .menu-btn {
-      position: fixed;
-      top: 20px;
-      left: 20px;
-      z-index: 1000;
-      cursor: pointer;
-      display: none;
-    }
-
-    .btn-line {
-      width: 30px;
-      height: 3px;
-      background-color: #333;
-      margin: 6px 0;
-    }
-
-    nav.menu {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      padding: 1rem 0;
-      background: #fff;
-      box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
-      flex-wrap: wrap;
-    }
-
-    nav.menu a {
-      text-decoration: none;
-      color: #333;
-      font-weight: 600;
-      transition: 0.3s ease;
-    }
-
-    nav.menu a:hover {
-      color: #00bcd4;
     }
 
     @media (max-width: 768px) {
@@ -142,14 +142,14 @@
       }
 
       nav.menu {
-        display: none;
         flex-direction: column;
-        background: #fff;
+        display: none;
         position: absolute;
         top: 60px;
         left: 0;
         right: 0;
-        text-align: center;
+        z-index: 1500;
+        background-color: #fff;
       }
 
       nav.menu.active {
@@ -158,14 +158,15 @@
     }
   </style>
 </head>
-
 <body>
+  <!-- Toggle Menu Icon -->
   <div class="menu-btn" onclick="toggleMenu()">
     <div class="btn-line"></div>
     <div class="btn-line"></div>
     <div class="btn-line"></div>
   </div>
 
+  <!-- Navigation Menu -->
   <nav class="menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -174,6 +175,7 @@
     <a href="contact.html">Contact</a>
   </nav>
 
+  <!-- Main Content -->
   <main id="work">
     <h1 class="lg-heading">
       My <span class="text-secondary">Projects</span>
@@ -225,10 +227,13 @@
     </div>
   </main>
 
+  <!-- Footer -->
   <footer>
     &copy; 2025 Nida Mirza
   </footer>
 
+  <!-- Scripts -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init({ duration: 1000 });
 
@@ -238,5 +243,4 @@
     }
   </script>
 </body>
-
 </html>
