--- a/index.html
+++ b/index.html
@@ -82,26 +82,45 @@ SSSssshhhhh!! The code starts below, Enjoy!!! -->
       line-height: 1.6;
     }
 
-    .menu-btn {
+      .menu-btn {
       position: fixed;
       top: 1rem;
       right: 1rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
       width: 30px;
       height: 25px;
       background: none;
       border: none;
+      z-index: 1002;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       cursor: pointer;
-      z-index: 1001;
     }
 
     .btn-line {
       width: 100%;
-      height: 3px;
+      height: 4px;
       background-color: #5eead4;
       transition: all 0.3s ease;
+    }
+
+    .menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background-color: rgba(11, 12, 16, 0.95);
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 2rem;
+      z-index: 1001;
+    }
+
+    .menu.show {
+      display: flex;
     }
 
     .menu-btn.close .btn-line:nth-child(1) {
@@ -116,33 +135,11 @@ SSSssshhhhh!! The code starts below, Enjoy!!! -->
       transform: rotate(-45deg) translate(5px, -5px);
     }
 
-    .menu {
-      transform: translateX(-100%);
-      transition: transform 0.3s ease;
-      position: fixed;
-      width: 100%;
-      height: 100vh;
-      background-color: #0b0c10;
-      top: 0;
-      left: 0;
-      z-index: 1000;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 2rem;
-    }
-
-    .menu.show {
-      transform: translateX(0);
-    }
-
     .menu a {
       color: #5eead4;
-      font-size: 1.8rem;
-      font-weight: bold;
+      font-size: 1.5rem;
       text-decoration: none;
-      transition: color 0.3s ease;
+      transition: color 0.3s;
     }
 
     .menu a:hover {
