--- a/index.html
+++ b/index.html
@@ -211,14 +211,13 @@ SSSssshhhhh!! The code starts below, Enjoy!!! -->
 
 <body>
   <!-- Toggle Button -->
-  <button class="menu-btn" id="menu-btn" aria-label="Toggle Menu">
+ <button class="menu-btn" aria-label="Menu Toggle">
     <div class="btn-line"></div>
     <div class="btn-line"></div>
     <div class="btn-line"></div>
   </button>
 
-  <!-- Navigation Menu -->
-  <nav class="menu" id="menu">
+  <nav class="menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="work.html">Projects</a>
