--- a/contact.html
+++ b/contact.html
@@ -199,7 +199,7 @@
 </head>
 
 <body>
-  <button class="menu-btn" aria-label="Menu Toggle">
+ <button class="menu-btn" aria-label="Menu Toggle">
     <div class="btn-line"></div>
     <div class="btn-line"></div>
     <div class="btn-line"></div>
@@ -208,9 +208,9 @@
   <nav class="menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="projects.html">Projects</a>
+    <a href="work.html">Projects</a>
     <a href="resume.html">Resume</a>
-    <a href="contact.html" class="active">Contact</a>
+    <a href="contact.html">Contact</a>
   </nav>
 
   <main id="contact">
