--- a/about.html
+++ b/about.html
@@ -155,14 +155,13 @@
 
 <body>
   <!-- Toggle Menu Button -->
-  <button class="menu-btn" aria-label="Toggle Navigation">
+ <button class="menu-btn" aria-label="Menu Toggle">
     <div class="btn-line"></div>
     <div class="btn-line"></div>
     <div class="btn-line"></div>
   </button>
 
-  <!-- Navigation Menu -->
-  <nav class="menu" role="navigation">
+  <nav class="menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="work.html">Projects</a>
