--- a/work.html
+++ b/work.html
@@ -160,13 +160,12 @@
 </head>
 <body>
   <!-- Toggle Menu Icon -->
-  <div class="menu-btn" onclick="toggleMenu()">
+ <button class="menu-btn" aria-label="Menu Toggle">
     <div class="btn-line"></div>
     <div class="btn-line"></div>
     <div class="btn-line"></div>
-  </div>
+  </button>
 
-  <!-- Navigation Menu -->
   <nav class="menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
