--- a/work.html
+++ b/work.html
@@ -20,41 +20,68 @@
       color: #333;
     }
 
-    .menu-btn {
+     .menu-btn {
       position: fixed;
-      top: 20px;
-      left: 20px;
+      top: 1rem;
+      right: 1rem;
+      width: 30px;
+      height: 25px;
+      background: none;
+      border: none;
+      z-index: 1002;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       cursor: pointer;
-      z-index: 2000;
-      display: none;
     }
 
     .btn-line {
-      width: 30px;
-      height: 3px;
-      background: #333;
-      margin: 6px 0;
+      width: 100%;
+      height: 4px;
+      background-color: #5eead4;
+      transition: all 0.3s ease;
     }
 
-    nav.menu {
-      background-color: #fff;
-      display: flex;
+    .menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background-color: rgba(11, 12, 16, 0.95);
+      display: none;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: 1rem 0;
       gap: 2rem;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      z-index: 1001;
     }
 
-    nav.menu a {
+    .menu.show {
+      display: flex;
+    }
+
+    .menu-btn.close .btn-line:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    .menu-btn.close .btn-line:nth-child(2) {
+      opacity: 0;
+    }
+
+    .menu-btn.close .btn-line:nth-child(3) {
+      transform: rotate(-45deg) translate(5px, -5px);
+    }
+
+    .menu a {
+      color: #5eead4;
+      font-size: 1.5rem;
       text-decoration: none;
-      font-weight: bold;
-      color: #333;
       transition: color 0.3s;
     }
 
-    nav.menu a:hover {
-      color: #00bcd4;
+    .menu a:hover {
+      color: #ffffff;
     }
 
     .lg-heading {
