--- a/work.html
+++ b/work.html
@@ -38,7 +38,7 @@
     .btn-line {
       width: 100%;
       height: 4px;
-      background-color: #5eead4;
+      background-color: #000000;
       transition: all 0.3s ease;
     }
 
