--- a/about.html
+++ b/about.html
@@ -20,70 +20,78 @@
       background-color: #121212;
       color: #ffffff;
     }
-      .menu-btn {
+     .menu-btn {
       position: fixed;
-      top: 1rem;
-      right: 1rem;
-      width: 30px;
-      height: 25px;
-      background: none;
-      border: none;
-      z-index: 1002;
+      top: 2rem;
+      right: 2rem;
+      z-index: 2000;
+      cursor: pointer;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      cursor: pointer;
+      gap: 5px;
+      background: transparent;
+      border: none;
     }
 
     .btn-line {
-      width: 100%;
-      height: 4px;
-      background-color: #5eead4;
+      width: 25px;
+      height: 3px;
+      background-color: #333;
       transition: all 0.3s ease;
     }
 
-    .menu {
+    nav.menu {
       position: fixed;
       top: 0;
-      left: 0;
+      right: -100%;
+      height: 100%;
       width: 100%;
-      height: 100vh;
-      background-color: rgba(11, 12, 16, 0.95);
-      display: none;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 2rem;
-      z-index: 1001;
-    }
-
-    .menu.show {
+      background-color: #f9f9f9;
       display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 2rem;
+      transition: right 0.4s ease;
+      z-index: 1500;
     }
 
-    .menu-btn.close .btn-line:nth-child(1) {
-      transform: rotate(45deg) translate(5px, 5px);
-    }
-
-    .menu-btn.close .btn-line:nth-child(2) {
-      opacity: 0;
-    }
-
-    .menu-btn.close .btn-line:nth-child(3) {
-      transform: rotate(-45deg) translate(5px, -5px);
-    }
-
-    .menu a {
-      color: #5eead4;
-      font-size: 1.5rem;
+    nav.menu a {
+      font-size: 2rem;
       text-decoration: none;
-      transition: color 0.3s;
+      color: #333;
+      font-weight: 600;
+      transition: color 0.3s ease;
     }
 
-    .menu a:hover {
-      color: #ffffff;
+    nav.menu a:hover {
+      color: #e63946;
     }
 
+    nav.menu.show {
+      right: 0;
+    }
+
+    @media (min-width: 768px) {
+      .menu-btn {
+        display: none;
+      }
+
+      nav.menu {
+        position: static;
+        flex-direction: row;
+        height: auto;
+        width: auto;
+        background: none;
+        gap: 1rem;
+        justify-content: flex-end;
+        padding: 1rem 2rem;
+      }
+
+      nav.menu a {
+        font-size: 1.2rem;
+      }
+    }
     #about {
       max-width: 1000px;
       margin: auto;
@@ -159,13 +167,13 @@
 
 <body>
   <!-- Toggle Menu Button -->
- <button class="menu-btn" aria-label="Menu Toggle">
+<button class="menu-btn" id="menu-toggle" aria-label="Toggle Menu">
     <div class="btn-line"></div>
     <div class="btn-line"></div>
     <div class="btn-line"></div>
   </button>
 
-  <nav class="menu">
+  <nav class="menu" id="menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="work.html">Projects</a>
@@ -222,14 +230,9 @@
   </footer>
 
   <!-- Toggle Script -->
-  <script>
-     AOS.init();
-    const menuBtn = document.getElementById('menu-btn');
-    const menu = document.getElementById('menu');
-    menuBtn.addEventListener('click', () => {
-      menu.classList.toggle('show');
-      menuBtn.classList.toggle('close');
-    });
+ <script>
+    document.getElementById('menu-toggle').addEventListener('click', function () {
+      document.getElementById('menu').classList.toggle('show');
     });
   </script>
 </body>
