--- a/work.html
+++ b/work.html
@@ -248,17 +248,16 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init();
-    document.addEventListener("DOMContentLoaded", () => {
-      const menuBtn = document.getElementById("menu-btn");
-      const menu = document.getElementById("menu");
 
-      menuBtn.addEventListener("click", () => {
-        menu.classList.toggle("show");
-        menuBtn.classList.toggle("close");
-      });
+    const menuBtn = document.querySelector('.menu-btn');
+    const menu = document.querySelector('.menu');
+
+    menuBtn.addEventListener('click', () => {
+      menu.classList.toggle('show');
+      menuBtn.classList.toggle('close');
     });
   </script>
 </body>
