--- a/about.html
+++ b/about.html
@@ -230,9 +230,14 @@
   </footer>
 
   <!-- Toggle Script -->
- <script>
-    document.getElementById('menu-toggle').addEventListener('click', function () {
-      document.getElementById('menu').classList.toggle('show');
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+    const menuBtn = document.getElementById('menu-toggle');
+    const menu = document.getElementById('menu');
+    menuBtn.addEventListener('click', () => {
+      menu.classList.toggle('show');
+      menuBtn.classList.toggle('close');
     });
   </script>
 </body>
