--- a/about.html
+++ b/about.html
@@ -87,10 +87,9 @@
       color: #e63946;
     }
 
-    @media (min-width: 768px) {
-      .menu-btn {
-        display: none;
-      }
+  .menu-btn {
+  display: flex !important;
+}
 
       nav.menu {
         position: static;
