--- a/work.html
+++ b/work.html
@@ -152,11 +152,9 @@
       margin-top: 2rem;
     }
 
-    @media (max-width: 768px) {
-      .menu-btn {
-        display: block;
-      }
-
+  .menu-btn {
+  display: flex !important;
+}
       nav.menu {
         flex-direction: column;
         display: none;
