--- a/work.html
+++ b/work.html
@@ -16,7 +16,7 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background-color: #fdfbfa;
+      background-color: #0b0c10;
       color: #333;
     }
 
