--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ SSSssshhhhh!! The code starts below, Enjoy!!! -->
 
 <body>
   <!-- Toggle Button -->
- <button class="menu-btn" aria-label="Menu Toggle">
+ <button class="menu-btn" id="menu-btn" aria-label="Menu Toggle">
     <div class="btn-line"></div>
     <div class="btn-line"></div>
     <div class="btn-line"></div>
