--- a/work.html
+++ b/work.html
@@ -99,15 +99,16 @@
       max-width: 1200px;
       margin: auto;
     }
+.item {
+  background: #fff;
+  color: #333; /* ensure text visible */
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  transition: transform 0.3s ease;
+}
 
-    .item {
-      background: #fff;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      transition: transform 0.3s ease;
-    }
 
     .item:hover {
       transform: translateY(-5px);
@@ -169,7 +170,7 @@
       nav.menu.active {
         display: flex;
       }
-    }
+    
   </style>
 </head>
 <body>
@@ -246,11 +247,17 @@
   </footer>
 
   <!-- Scripts -->
-   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    document.getElementById('menu-toggle').addEventListener('click', function () {
-      document.getElementById('menu').classList.toggle('show');
-    });
-  </script>
+ <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+
+  const menuBtn = document.getElementById('menu-btn');
+  const menu = document.getElementById('menu');
+
+  menuBtn.addEventListener('click', () => {
+    menu.classList.toggle('show');
+    menuBtn.classList.toggle('close');
+  });
+</script>
 </body>
 </html>
