--- a/work.html
+++ b/work.html
@@ -73,6 +73,17 @@
       transform: rotate(-45deg) translate(5px, -5px);
     }
 
+      .menu a {
+      color: #5eead4;
+      font-size: 1.5rem;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+
+    .menu a:hover {
+      color: #ffffff;
+    }
+
     .lg-heading {
       text-align: center;
       margin-top: 4rem;
